--- a/src/components/pages/weather-page.css
+++ b/src/components/pages/weather-page.css
@@ -1,5 +1,10 @@
 .weather-details {
         display: flex;
+        margin: 0 auto;
+        font-size: 2.2em;
+        text-align: center;
+        color: #fff;
+        font-size: 5em;
         justify-content: center;
         align-items: center;
         flex-direction: column;
